fix picture overlapping problem

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -7,6 +7,7 @@ $primaryColor: #ff887b;
   min-height: 8vh;
   background-color: rgba($color: $primaryColor, $alpha: 0.9);
   position: fixed;
+  z-index: 1;
   top: 0;
   width: 100%;
 
